# midi_file_performer

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
examples/: basic_playback.rs  jump_to.rs  looping.rs  speed_adjust.rs
src/: error.rs  lib.rs  sleep.rs
src/engine/: error.rs  mod.rs
src/messages/: mod.rs
src/score/: error.rs  event.rs  meta_event.rs  midi_event.rs  mod.rs  moment.rs  simultaneous_events.rs  tests.rs  track.rs
src/timer/: mod.rs  utils.rs
test_midi_files/: changing_tempo.mid  constant_tempo.mid  scarborough_fair.mid
